# astral-points

./: Cargo.toml  rustfmt.toml
client/: Cargo.toml
client-impl/: Cargo.toml
common/: Cargo.toml
common/src/: lib.rs
common/src/models/: component.rs  context.rs  entity.rs  game_world.rs  lua_component.rs  mod.rs
common/src/models/components/: collider.rs  health.rs  item.rs  name.rs  player.rs  position.rs  storage.rs
common/src/tests/: ecs_tests.rs  mod.rs
common/src/utils/: collision.rs  mod.rs  vector2.rs
data/: Cargo.toml
data/src/: lib.rs
data/src/config/: entity_template.rs
data/src/data/entity_templates/: skeleton_bow.yaml
data/src/lua/: lua.rs  lua_entity.rs  mod.rs
data/src/tests/: data_tests.rs  mod.rs
server/: Cargo.toml
server-impl/: Cargo.toml
server-impl/src/: main.rs
server-impl/src/routes/: websocket.rs
server-impl/src/services/: websocket.rs
src/: context.rs  main.rs
src/config/: entity_template.rs  mod.rs
src/data/entity_templates/: skeleton.yaml
src/graphics/: mesh.rs  mod.rs  object3d.rs
src/lua/: lua.rs  lua_component.rs  lua_entity.rs  mod.rs
src/models/: component.rs  entity.rs  game_world.rs  mod.rs
src/models/components/: collider.rs  health.rs  item.rs  name.rs  player.rs  position.rs  storage.rs
src/routes/: websocket.rs
src/tests/: ecs_tests.rs
src/utils/: collision.rs  mod.rs  spatial_utils.rs  vector2.rs
