[package]
name = "astralpoints"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.17"
axum = {version = "0.6", features = ["ws"]}
tower = "0.4"
prost = "0.11"
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-native-tls"] }
dashmap = "5.0"
tracing = "0.1"
tracing-subscriber = "0.3"
futures = "0.3"
nanoid = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
serde_yaml = "0.9"