[package]
edition = "2024"
name = "common"
version = "0.1.0"

[dependencies]
dashmap = "5.0"
futures = "0.3"
nanoid = "0.4"
prost = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-native-tls"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.17"
tower = "0.5.2"
tracing = "0.1"
mlua = { version = "0.10.2", features = ["lua54", "vendored", "async", "send", "serialize"] }


[dev-dependencies]
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
